<resources>
	<string name="app_name" translatable="false">RateBeer</string>
	<string name="app_account">Account</string>
	<string name="app_upgrade_welcome">Welcome to the new RateBeer</string>
	<string name="app_upgrade">Sorry for the recent lack of updates. I promise do be better.\n\nI hope you find the new app more intuitive, quicker and reliable. Some features will be missing at first, but I will slowly rebuild them. At least you already have full offline access to your ratings.\n\nDoes that sound nice?</string>
	<string name="app_accept">I accept your apology</string>
	<string name="app_decline">Forget it</string>
	<string name="app_refresh">Refresh</string>
	<string name="app_openorshare">Open or share link</string>
	<string name="app_sharetext">%1$s on RateBeer\n%2$s</string>

	<string name="signin_welcome">Welcome to RateBeer</string>
	<string name="signin_getaccount">The biggest source on craft beer is at your fingertips! To get the most out of your beer experience, please sign in to your RateBeer account.</string>
	<string name="signin_comingsoon">Please hold on while work on this brand new app. You can already search the complete online craft beer database and rate beers with your profile.\n\nMore is coming very soon, promise!</string>
	<string name="signin_connect">Connect to your account</string>
	<string name="signin_signin">Sign in</string>
	<string name="signin_create">Create account</string>
	<string name="signin_skip">Skip</string>
	<string name="signin_username">User name</string>
	<string name="signin_password">Password</string>

	<string name="search_beers">Beers</string>
	<string name="search_breweries">Breweries</string>
	<string name="search_places">Places</string>
	<string name="search_hint">Search a beer, brewery, place</string>
	<string name="search_scan">Scan barcode</string>
	<string name="search_noresults">Nothing found</string>

	<string name="main_myratings">My ratings</string>
	<string name="main_friends">Friends</string>
	<string name="main_local">Local</string>
	<string name="main_global">Global</string>
	<string name="main_nearby">Nearby</string>
	<string name="main_mylists">My lists</string>
	<string name="main_top50">Top 50</string>

	<string name="feed_isdrinking">is drinking</string>
	<string name="feed_wasawarded">was awarded</string>
	<string name="feed_checkedinat">checked in at</string>
	<string name="feed_andmore">and %1$d more</string>

	<string name="beer_stylebrewer">A %1$s by %2$s</string>
	<string name="beer_brewer">By %1$s</string>
	<string name="beer_overall">Overall</string>
	<string name="beer_instyle">Style</string>
	<string name="beer_ratecount">Ratings</string>
	<string name="beer_weighted">Weighted</string>
	<string name="beer_realavg">Average</string>
	<string name="beer_abv">ABV</string>
	<string name="beer_ibu">IBU</string>
	<string name="beer_calories">Calories</string>
	<string name="beer_avgreal">REAL AVG</string>
	<string name="beer_avgweighted">WEIGHTED</string>
	<string name="beer_alias">alias</string>
	<string name="beer_retired">retired</string>
	<string name="beer_rated">rated</string>
	<string name="beer_unrateable">unrateable</string>
	<string name="beer_mark_breakdown">Arithmetic average: %1$s\nWeighted average: %1$s</string>
	<string name="beer_isalias">This beer is an alias, such as an alternative market distribution or a name change</string>
	<string name="beer_findalias">Open aliased beer</string>
	<string name="beer_opendetails">Show more details</string>

	<string name="brewery_typelocation">%1$s in %2$s</string>
	<string name="brewery_type_brewery">A brewery</string>
	<string name="brewery_type_micro">A microbrewery</string>
	<string name="brewery_type_brewpub">A brew pub</string>
	<string name="brewery_type_brewery_pub">A brew pub/brewery</string>
	<string name="brewery_type_contract">A contract brewer</string>
	<string name="brewery_type_client">A client brewery</string>
	<string name="brewery_type_commissioner">A commissioner</string>
	<string name="brewery_type_meadery">A meadery</string>
	<string name="brewery_type_cidery">A cidery</string>
	<string name="brewery_type_sake">A sake producer</string>

	<string name="rate_enterrating">Enter rating</string>
	<string name="rate_offline_badge">offline only</string>
	<string name="rate_beername">Beer name</string>
	<string name="rate_aroma">Aroma</string>
	<string name="rate_appearance">Appear.</string>
	<string name="rate_taste">Taste</string>
	<string name="rate_palate">Palate</string>
	<string name="rate_overall">Overall</string>
	<string name="rate_total">Total score</string>
	<string name="rate_comments">Comments</string>
	<string name="rate_upload">Upload</string>
	<string name="rate_findbeer">Find beer</string>
	<string name="rate_discard_rating">Discard rating</string>
	<string name="rate_discard_changes">Discard changes</string>
	<string name="rate_discard_confirm">This rating is not yet uploaded. Discard it anyway?</string>
	<string name="rate_error_norating">You have not yet finished your scoring</string>
	<string name="rate_error_commentlength">You comment must be at lesat 80 characters</string>

	<string name="place_typelocation">%1$s in %2$s</string>
	<string name="place_km">km</string>
	<string name="place_miles">m</string>
	<string name="place_taps">%1$s taps</string>
	<string name="place_bottles">%1$s bottles</string>
	<string name="place_openbrewer">View associated brewery</string>
	<string name="place_checkin">Perform check-in</string>
	<string name="place_opentimes">Open %1$s</string>
	<string name="place_checkin_ok">You checked in</string>
	<string name="place_checkin_error">You have already checked into this place recently</string>

	<string name="place_type_brewpub">A brewpub</string>
	<string name="place_type_bar">A bar</string>
	<string name="place_type_beerstore">A beer store</string>
	<string name="place_type_restaurant">A restaurant</string>
	<string name="place_type_brewery">A brewery/taproom</string>
	<string name="place_type_homebrewshop">A homebrew shop</string>
	<string name="place_type_grocerystore">A grocery store</string>
	<string name="place_type_internetbased">An internet-based store</string>
	<string name="place_type_unkkown">A business</string>

	<string name="lists_delete">Delete list</string>
	<string name="lists_create_new">Create new list</string>
	<string name="lists_select_list">Select a list</string>
	<string name="lists_listname">List name</string>
	<string name="lists_quick_add">Quick add a beer</string>
	<string name="lists_note">Personal note</string>
	<string name="lists_open_beer">View beer</string>

	<string name="top_overall">Top 50 overall</string>
	<string name="top_topoverall">Top 50 overall</string>
	<string name="top_bycountry">By country</string>
	<string name="top_topbycountry">Top 50 by country</string>
	<string name="top_bystyle">By style</string>
	<string name="top_topbystyle">Top 25 by style</string>
	<string name="top_country">Country</string>
	<string name="top_style">Style</string>
	<string name="top_clear">Clear filter</string>

	<string name="sync_usesync">Tap to synchronize your ratings</string>
	<string name="sync_insync">Synchronizing your ratings</string>
	<string name="sync_error">Ratings synchronization failed</string>
	<string name="sync_tryagain">Touch to try again</string>

	<string name="help_more">Help and more</string>
	<string name="help_developer" translatable="false">created by Eric Kok of 2312 development</string>
	<string name="help_signin">Sign in to RateBeer account</string>
	<string name="help_signout">Sign out</string>
	<string name="help_whereratings">Where are my (offline) ratings?</string>
	<string name="help_whereratings_text">Don\'t worry - they are safe.\n\nAll ratings you have uploading to RateBeer using the old app or entered directly on ratebeer.com are stored on the website. In fact, when you sign in, they are fully synchronized for quick searching and available for offline access when a connection is not available.\n\nAny offline ratings you had made in the old app and had not yet uploaded are still stored on your device, in the app\'s database. They should be transferred when upgrading the app and visible in your main ratings screen.\n\nAny rating marked \'offline only\' in the main screen is not yet uploaded to RateBeer. You can do so at any time, when you have a connection.</string>
	<string name="help_report">Report bug or request help</string>
	<string name="help_visitrb">Visit ratebeer.com</string>
	<string name="help_useragreement">User agreement</string>

	<string name="settings_savedata">Data saver mode (photos on wifi only)</string>
	<string name="settings_metricunits">Use metric units (meters, liters)</string>

	<string name="error_connectionunavailable">No wifi or mobile network available</string>
	<string name="error_connectionfailure">Connection failure - your connection is poor or RateBeer is not responding</string>
	<string name="error_upgradefailed">Sorry, your account could not be upgraded</string>
	<string name="error_authenticationfailed">Your username or password is incorrect</string>
	<string name="error_nouserorpass">Both username and password are required fields</string>
	<string name="error_unexpectederror">Unexpected error, sorry, please report</string>
	<string name="error_noratings">No ratings yet!\n\nTime to crack open a beer…</string>
	<string name="error_nofeeditems">No recent activity here…</string>
	<string name="error_noplaces">No places can be found around you</string>
	<string name="error_noresults">No results.\n\nTry using part of the name, but at least 3 characters.</string>
	<string name="error_nolists">No lists yet.\n\nUsing the red button you can start a local list of any beers you want.</string>
	<string name="error_nolistbeers">No beers yet on this list.\n\nUsing the red button you can quick-add beers, or add a beer from the beer details page.</string>
	<string name="error_nolocationpermission">This feature requires access to your location.\n\nYour location is only coarsely determined - roughly a city block - and is never shared in any way or even send to RateBeer.</string>
	<string name="error_locationpermissionrequired">Location access denied: nearby places not available</string>
	<string name="error_cannotopenurl">This link cannot be opened on your device</string>

</resources>
