<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".gui.WelcomeActivity">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:background="@color/blue_main"
		android:scaleType="center"
		android:src="@drawable/icon_large"
		android:contentDescription="@null" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:fontFamily="sans-serif-condensed"
		android:text="@string/signin_welcome"
		android:textColor="@android:color/black"
		android:textSize="21sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:text="@string/signin_comingsoon"
		android:textColor="@android:color/black" />

	<RelativeLayout
		android:id="@+id/decision_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="16dp"
		android:paddingEnd="16dp"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingStart="16dp">

		<Button
			android:id="@+id/connect_button"
			style="@style/AppButton.Orange"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:onClick="signIn"
			android:text="@string/signin_signin" />

		<Button
			style="@style/AppButton.White"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_toLeftOf="@id/connect_button"
			android:layout_toStartOf="@id/connect_button"
			android:onClick="skip"
			android:text="@string/signin_skip" />

	</RelativeLayout>

</LinearLayout>