<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="3dp"
	android:orientation="vertical">

	<TextView
		android:id="@+id/rating_text"
		android:layout_width="@dimen/block_size"
		android:layout_height="@dimen/block_size"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:gravity="center"
		android:textColor="@android:color/white"
		android:textSize="30sp"
		tools:background="@color/blue_main"
		tools:text="4.3" />

	<ImageView
		android:id="@+id/photo_image"
		android:layout_width="@dimen/block_size"
		android:layout_height="@dimen/block_size"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginBottom="2dp"
		android:layout_marginEnd="4dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="4dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="2dp"
		android:scaleType="fitCenter"
		tools:src="@drawable/beer_208708" />

	<TextView
		android:id="@+id/name_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="2dp"
		android:layout_marginTop="8dp"
		android:layout_toEndOf="@+id/rating_text"
		android:layout_toLeftOf="@+id/photo_image"
		android:layout_toRightOf="@+id/rating_text"
		android:layout_toStartOf="@+id/photo_image"
		android:fontFamily="sans-serif-condensed"
		android:textColor="@android:color/black"
		android:textSize="16sp"
		android:textStyle="bold"
		tools:text="À l’Abri de la Tempête Palabre de la Corne de Glace" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/name_text"
		android:layout_toLeftOf="@+id/photo_image"
		android:layout_toStartOf="@+id/photo_image"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/unrateable_badge"
			style="@style/Badge.Unrateable"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/beer_unrateable" />

		<TextView
			android:id="@+id/retired_badge"
			style="@style/Badge.Retired"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/beer_retired" />

		<TextView
			android:id="@+id/alias_badge"
			style="@style/Badge.Alias"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/beer_alias" />

		<TextView
			android:id="@+id/rated_badge"
			style="@style/Badge.Rated"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/beer_rated" />

	</LinearLayout>

</RelativeLayout>
